added addthis sharing

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1092,6 +1092,11 @@ img.float-right {
   background: url(buy-background.png) no-repeat;
   }
 
+.addthis_toolbox {
+  width: 230px;
+  margin-left: 76px;
+  }
+
 .gift-buy-box2 {
   height: 420px;
   width: 230px;
