--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -29,6 +29,14 @@
             <div class="span3 no-margin-or-bullet pull-right">
               <span class='st_facebook_hcount' displayText='Facebook'></span>
               <span class='st_twitter_hcount' displayText='Tweet' st_title='<%= @page_title %> via @bubboli'></span>
+              
+              <!-- AddThis Button BEGIN -->
+              <div class="addthis_toolbox addthis_default_style">
+              <a class="addthis_button_facebook_like" fb:like:layout="button_count"></a>
+              <a class="addthis_button_tweet"></a>
+              </div>
+              <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=undefined"></script>
+              <!-- AddThis Button END -->
             </div>
 
           </div>
