--- a/app/views/layouts/_subnav.html.erb
+++ b/app/views/layouts/_subnav.html.erb
@@ -3,4 +3,14 @@
   <li><%= link_to twitter, "http://www.twitter.com/bubboli", :target => "_blank" %></li>
   <li><%= link_to pinterest, "http://www.pinterest.com/bubboli/", :target => "_blank" %></li>
   <li><%= link_to rss, "#", :target => "_blank" %></li>
+  
+  <!-- AddThis Follow BEGIN -->
+  <div class="addthis_toolbox addthis_32x32_style addthis_default_style">
+  <a class="addthis_button_facebook_follow" addthis:userid="bubboli"><%= facebook %></a>
+  <a class="addthis_button_twitter_follow" addthis:userid="bubboli"><%= twitter %></a>
+  <a class="addthis_button_pinterest_follow" addthis:userid="bubboli"><%= pinterest %></a>
+  </div>
+  <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=xa-518d26d65475ecc9"></script>
+  <!-- AddThis Follow END -->
+  
 </ul>  
