--- a/app/views/gifts/index.html.erb
+++ b/app/views/gifts/index.html.erb
@@ -9,10 +9,17 @@
       <hr/>
       <p class="splash-font"><strong>WE ARE SOCIAL: </strong><br/></p>
       <div style="opacity: 0.6">
-        <%= link_to facebook, "http://www.facebook.com/bubboli", :target => "_blank" %> 
+        <!-- <%= link_to facebook, "http://www.facebook.com/bubboli", :target => "_blank" %> 
         <%= link_to twitter, "http://www.twitter.com/bubboli", :target => "_blank" %>
         <p style="text-align: center"><%= link_to pinterest, "http://www.pinterest.com/bubboli/", :target => "_blank" %>
-        <%= link_to rss, "#", :target => "_blank" %></p>
+        <%= link_to rss, blogs_url(format: "atom"), :target => "_blank" %></p>
+         -->
+        <a class="addthis_button_facebook_follow" addthis:userid="bubboli"><%= facebook %></a>
+        <a class="addthis_button_twitter_follow" addthis:userid="bubboli"><%= twitter %></a><br>
+        <a class="addthis_button_pinterest_follow" addthis:userid="bubboli"><%= pinterest %></a>
+        <a class="addthis_button_rss_follow" addthis:userid="bubboli.com/blog.atom"><%= rss %></a>
+        <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=xa-518d26d65475ecc9"></script>
+        
       </div>
     </div>
     
