--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,7 +10,7 @@
   <div class="row">
     <ul class="child-list">
       <% @relationships_by_birth_date.each do |r| %>    
-        <% if (0..31)..include?(r.child.birthday_days)%>      
+        <% if (0..31).include?(r.child.birthday_days)%>      
         <li class="children-following child-list block">
           <%= render(:partial => 'child_list', :locals => {:r => r})%>
           <!-- <span style="color: #999999; font-size: 12px">Birthday: <%= r.child.birth_date.strftime("%b. %d")%></span> -->
