--- a/app/views/pages/_faq.html.erb
+++ b/app/views/pages/_faq.html.erb
@@ -29,7 +29,7 @@
 
     <li>
       <strong>How long have you been around?</strong>
-      <p>Since February 2012.
+      <p>
       Our company is still a baby, so please bear with us as we learn to crawl and take our 
       first steps. We have a lot of great things planned for the months ahead and would love for you join us on 
       our journey. Help us make Bubboli better or just drop us a note to say hi at <%= mail_to("contact@bubboli.com") %></p>
@@ -37,8 +37,8 @@
 
     <li>
       <strong>How do you choose your gifts?</strong>
-      <p>Your bubs are important to you so we know you only want the best for them.  That is why we have a very <%= link_to "strict criteria", about_path(:anchor => 'gif_criterion') %> 
-        for selecting the toys the recommend.  We will never recommend something we don't stand behind 100%.</p>
+      <p>Your bubs are important to you so we know you only want the best for them.  That is why we have a very <%= link_to "strict criteria", about_path(:anchor => 'gift_criterion') %> 
+        for selecting the toys we recommend.  We will never recommend something we don't stand behind 100%.</p>
     </li>
 
     <li>
@@ -50,19 +50,20 @@
     <li>
       <strong>How is Bubboli different from a gift registry?</strong>
       <p>Bubboli gift recommendations are completely initiated by the gifter. Gifters come to the site to receive recommendations for 
-        the bubs in their lives. Bubboli helps the gifter choose a gift based on their specific preferences for each child so the gifts 
+        the kids in their lives. Bubboli helps the gifter choose a gift based on their specific preferences for each child so the gifts 
         are a reflection of the gifter as well as the child.<br><br> 
 
-      Additionally, the gifter can see the recent list of toys the bub received from other gifters and a list of recently 
+      Additionally, the gifter can see the recent list of toys the bubbie received from other gifters and a list of recently 
       purchased toys by the parents throughout the year so you can get an idea of what they are interested in and avoid duplicate gifts.<br><br> 
 
-      Giving and receiving birthday gifts are fun and exciting and we’d like to keep that element of surprise for the child.</p>
+      Giving and receiving birthday gifts are fun and exciting and we’d like to keep that element of surprise for the child by not letting
+      them dictate the gifts they receive.</p>
     </li>
 
     <li>
       <strong>Why does the “Buy Me” link take me to a different site?</strong>
-      <p>Bubboli does not warehouse any of the gifts recommend. We find gifts that meet our strict criteria.  We believe this gives us uninhibited
-        freedom to choose only the best gifts eliminating any bias towards what we already have in inventory.<br><br></p>
+      <p>Bubboli does not warehouse any of the gifts we recommend. We pride ourselves in finding fun and unique gifts that meet our strict criteria.  We believe this gives us uninhibited
+        freedom to choose only the best gifts eliminating any bias towards promoting what we already have in inventory.<br><br></p>
     </li>
 
     <li>
