changed all the media icon links in emails

--- a/app/views/friend_alert_mailer/friend_alert.html.erb
+++ b/app/views/friend_alert_mailer/friend_alert.html.erb
@@ -163,17 +163,17 @@
                                         <div style="color: #707070; font-family: Arial; font-size: 12px; line-height: 125%; text-align: center">
                                           <span valign="middle" style="color: #53868B; font-weight: normal; font-size: 15px;">LET'S BE FRIENDS</span>
                                           &nbsp; &nbsp; &nbsp;
-                                          <a href="http://www.facebook.com/bubboli" style="color: #53868B; font-weight: normal; text-decoration: none" target="_blank"></a>
-                                            <img align="none" alt="facebook" height="28" width="28" src="http://localhost:3000/assets/facebook.jpg" style="width: 28px; min-height: 28px; border: 0; 
-                                            line-height: 100%; outline: none; text-decoration: none; display: inline">
+                                          <a href="http://www.facebook.com/bubboli" style="color: #53868B; font-weight: normal; text-decoration: none" target="_blank">
+                                            <img align="none" alt="facebook" height="28" width="28" src="http://bubboli-kids-staging.herokuapp.com/assets/facebook-1b2ef8ce990d2d5128b991439c823ff2.jpg" style="width: 28px; min-height: 28px; border: 0; 
+                                            line-height: 100%; outline: none; text-decoration: none; display: inline"></a>
                                             &nbsp; &nbsp; &nbsp;
-                                          <a href="http://www.twitter.com/bubboli" style="color: #53868B; font-weight: normal; text-decoration: none" target="_blank"></a>
-                                            <img align="none" alt="twitter" height="28" width="28" src="http://localhost:3000/assets/twitter.jpg" style="width: 28px; min-height: 28px; border: 0; 
-                                            line-height: 100%; outline: none; text-decoration: none; display: inline">
+                                          <a href="http://www.twitter.com/bubboli" style="color: #53868B; font-weight: normal; text-decoration: none" target="_blank">
+                                            <img align="none" alt="twitter" height="28" width="28" src="http://bubboli-kids-staging.herokuapp.com/assets/twitter-8e83259a680f80ec6cad0523566058bc.jpg" style="width: 28px; min-height: 28px; border: 0; 
+                                            line-height: 100%; outline: none; text-decoration: none; display: inline"></a>
                                             &nbsp; &nbsp; &nbsp;
-                                          <a href="http://www.pinterest.com/bubboli" style="color: #53868B; font-weight: normal; text-decoration: none" target="_blank"></a>
-                                            <img align="none" alt="pinterest" height="28" width="28" src="http://localhost:3000/assets/pinterest.jpg" style="width: 28px; min-height: 28px; border: 0; 
-                                            line-height: 100%; outline: none; text-decoration: none; display: inline">
+                                          <a href="http://www.pinterest.com/bubboli" style="color: #53868B; font-weight: normal; text-decoration: none" target="_blank">
+                                            <img align="none" alt="pinterest" height="28" width="28" src="http://bubboli-kids-staging.herokuapp.com/assets/pinterest-75c7580fa4d94516aa6f4b0f1b5ea77b.jpg" style="width: 28px; min-height: 28px; border: 0; 
+                                            line-height: 100%; outline: none; text-decoration: none; display: inline"></a>
                                             &nbsp; &nbsp; &nbsp;
                                             <span style="color: #53868B; font-weight: normal; font-size: 15px;">STAY CONNECTED</span>
                                         </div>  
