formatted buttons in emails with rounded corner and no underlines

--- a/app/views/user_mailer/account_confirmation.html.erb
+++ b/app/views/user_mailer/account_confirmation.html.erb
@@ -78,7 +78,7 @@
                             <div style="color: #505050; font-family: Arial; font-size: 13px; line-height: 150%; text-align: left; max-width: 225px;">
                               <table>
                                 <tr>
-                                  <td style="background-color:#6FAE4D; height: 35px; padding:6px; width:225px; text-align:center; font-family:Arial; font-size:13px;">                                      
+                                  <td style="background-color:#6FAE4D; height: 35px; padding:6px; width:225px; text-align:center; font-family:Arial; font-size:13px; -moz-border-radius: 5px; -webkit-border-radius: 5px; border-radius: 5px;">                                      
                                     <a href="<%= confirm_url(@user.confirmation_token) if @user.confirmation_token %>" target="_blank" style="color: #FFFFFF; text-decoration: none;"><span style="color: #FFFFFF;">ACTIVATE YOUR ACCOUNT</span></a>                                      
                                   </td>
                                 </tr>
