--- a/app/views/user_mailer/password_reset.html.erb
+++ b/app/views/user_mailer/password_reset.html.erb
@@ -83,7 +83,7 @@
                             <div style="color: #505050; font-family: Arial; font-size: 13px; line-height: 150%; text-align: left; max-width: 225px;">
                               <table>
                                 <tr>
-                                  <td style="background-color:#6FAE4D; height: 35px; padding:6px; width:225px; text-align:center; font-family:Arial; font-size:13px;">                                      
+                                  <td style="background-color:#6FAE4D; height: 35px; padding:6px; width:225px; text-align:center; font-family:Arial; font-size:13px; -moz-border-radius: 5px; -webkit-border-radius: 5px; border-radius: 5px;">                                      
                                     <a href="<%= edit_password_reset_url(@user.password_reset_token) if @user.password_reset_token %>" target="_blank" style="color: #FFFFFF; text-decoration: none;"><span style="color: #FFFFFF;">RESET PASSWORD</span></a>                                      
                                   </td>
                                 </tr>
