--- a/app/views/gift_alert_mailer/gift_alert.html.erb
+++ b/app/views/gift_alert_mailer/gift_alert.html.erb
@@ -115,8 +115,9 @@
                                       </tr>
                                       
                                       <tr>
-                                        <td style="background-color:#6FAE4D; height: 25px; padding:6px; width:150px; text-align:center; font-family:Arial; font-size:15px; -moz-border-radius: 5px; -webkit-border-radius: 5px; border-radius: 5px;">                                      
-                                          <a href="http://www.bubboli.com" target="_blank" style="color: #FFFFFF"><span style="color: #FFFFFF;">CONFIRM THIS GIFT</span></a>                                      
+                                        <td style="background-color:#6FAE4D; height: 25px; padding:6px; width:150px; text-align:center; font-family:Arial; 
+                                        font-size:15px; -moz-border-radius: 5px; -webkit-border-radius: 5px; border-radius: 5px;">                                      
+                                          <a href="http://www.bubboli.com" target="_blank" style="color: #FFFFFF; text-decoration: none;"><span style="color: #FFFFFF;">CONFIRM THIS GIFT</span></a>                                      
                                         </td>
                                       </tr>
                                     </table>
