--- a/app/views/gift_recommendation_mailer/gift_recommendation.html.erb
+++ b/app/views/gift_recommendation_mailer/gift_recommendation.html.erb
@@ -67,17 +67,17 @@
                             	<tr>
                                 <td style="background-color:#63CECA; padding:6px; width:60px; text-align:center; font-family:Arial; font-size:15px; border-left: 5px solid #FFFFFF;">
                                   <div>
-                                  <a href="http://www.bubboli.com/gifts" target="_blank" style="color: #FFFFFF">Shop</a>
+                                  <a href="http://www.bubboli.com/gifts" target="_blank" style="color: #FFFFFF; text-decoration: none;"><span style="color: #FFFFFF;">Shop</span></a>
                                   </div>
                                 </td>    
                                 <td style="background-color:#63CECA; padding:6px; width:60px; text-align:center; font-family:Arial; font-size:15px; border-left: 5px solid #FFFFFF;">
                                   <div>
-                                  <a href="http://www.bubboli.com/blog" target="_blank" style="color: #FFFFFF">Blog</a>
+                                  <a href="http://www.bubboli.com/blog" target="_blank" style="color: #FFFFFF; text-decoration: none;"><span style="color: #FFFFFF;">Blog</span></a>
                                   </div>
                               	</td> 
                               	<td style="background-color:#63CECA; padding:6px; width:60px; text-align:center; font-family:Arial; font-size:15px; border-left: 5px solid #FFFFFF;">
                                   <div>
-                                  <a href="http://www.bubboli.com/signin" target="_blank" style="color: #FFFFFF">Account</a>
+                                  <a href="http://www.bubboli.com/signin" target="_blank" style="color: #FFFFFF; text-decoration: none;"><span style="color: #FFFFFF;">Account</span></a>
                                   </div>
                               	</td> 
                               </tr>
