--- a/app/views/friend_alert_mailer/friend_alert.html.erb
+++ b/app/views/friend_alert_mailer/friend_alert.html.erb
@@ -125,7 +125,7 @@
                                 
                                 <!-- // Begin Module: Friend Alert \\ -->
                                 <td valign="top" style="border-collapse: collapse">
-                                  <%= @user.image ? image_tag @user.image_url(:thumb) : image_tag("profile_pic_default.jpg")%>
+                                  <%= @user.image ? image_tag(@user.image_url(:thumb)) : image_tag("profile_pic_default.jpg")%>
                                 </td>
                                 <td>  
                                   <div style="color: #505050; font-family: Arial; font-size: 14px; line-height: 150%; text-align: left; max-width: 160px;">
