--- a/app/views/friend_alert_mailer/friend_alert.html.erb
+++ b/app/views/friend_alert_mailer/friend_alert.html.erb
@@ -136,6 +136,13 @@
                                           <%= @user.first_name %>
                                         </td>
                                       </tr>
+                                      
+                                      <tr>
+                                        <td style="color: #53868b; display: block; font-family: Arial; font-size: 20px; font-weight: normal;
+                                        line-height: 100%; margin-top: 0; margin-right: 0; margin-bottom: 10px; margin-left: 0; text-align: center">
+                                          (<%= @user.email %>)
+                                        </td>
+                                      </tr>
                                     
                                       <tr>
                                         <td style="background-color:#6FAE4D; height: 25px; padding:6px; width:150px; text-align:center; font-family:Arial; font-size:15px; -moz-border-radius: 5px; -webkit-border-radius: 5px; border-radius: 5px;">                                      
