--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -866,6 +866,19 @@ li.child-list {
   color: $light-gray; 
   font-size: 12px;
   }
+  
+.user-notification {
+  background: none repeat scroll 0 0 #FFFFFF;
+  border-radius: 5px 5px 5px 5px;
+  box-shadow: 3px 3px 10px $subdued-red, -3px -3px 10px $subdued-red;
+  color: #333333;
+  padding: 10px;
+  margin-bottom: 10px;
+  text-align: left;
+  border-radius: 5px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  }
 
 
 /*==================================================
