added specific page for friend and gift alert email

--- a/app/views/friend_alert_mailer/friend_alert.html.erb
+++ b/app/views/friend_alert_mailer/friend_alert.html.erb
@@ -108,7 +108,7 @@
                           	  </tr>
                           	  
                           	  <tr>
-                          	  <td style="color:#707070; font-size: 15px; line-height:150%;">Help <%= @user.first_name %> avoid duplicate gifting by <a href="http://www.bubboli.com" style="color:#ff6f6a;
+                          	  <td style="color:#707070; font-size: 15px; line-height:150%;">Help <%= @user.first_name %> avoid duplicate gifting by <a href="<%= @page %>" style="color:#ff6f6a;
                               font-weight:normal;text-decoration:none" target="_blank">accepting </a> the friendship so they can see what's already been purchased
                               for <%= @child.first_name %>.</td>
                               </tr>
@@ -146,7 +146,7 @@
                                     
                                       <tr>
                                         <td style="background-color:#6FAE4D; height: 25px; padding:6px; width:150px; text-align:center; font-family:Arial; font-size:15px; -moz-border-radius: 5px; -webkit-border-radius: 5px; border-radius: 5px;">                                      
-                                          <a href="http://www.bubboli.com" target="_blank" style="color: #FFFFFF; text-decoration: none;"><span style="color: #FFFFFF;">ACCEPT FRIEND</span></a>                                      
+                                          <a href="<%= @page %>" target="_blank" style="color: #FFFFFF; text-decoration: none;"><span style="color: #FFFFFF;">ACCEPT FRIEND</span></a>                                      
                                         </td>
                                       </tr>
                                     </table>
