--- a/app/views/gift_alert_mailer/gift_alert.html.erb
+++ b/app/views/gift_alert_mailer/gift_alert.html.erb
@@ -86,7 +86,7 @@
                           	  </tr>
                           	  
                           	  <tr>
-                            	  <td style="color:#707070; font-size: 15px; line-height:150%;">Help others avoid duplicate gifting by <a href="http://www.bubboli.com" style="color:#ff6f6a;
+                            	  <td style="color:#707070; font-size: 15px; line-height:150%;">Help others avoid duplicate gifting by <a href="<%= @page %>" style="color:#ff6f6a;
                                 font-weight:normal;text-decoration:none" target="_blank">confirming </a> the gift so others can see what's already been purchased
                                 for <%= @child.first_name %>.</td>
                               </tr>
