changed home page

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,13 +1,13 @@
 <div class="container">
   <div class="index-background">  
     <div class="row">
-      <div style="padding-left: 40px">  
-        <span style="font-size: 20px; text-align: center; font-family: 'futura-pt-condensed';">CURATED BIRTHDAY GIFTS FOR KIDS AT YOUR FINGERTIPS!</span>
+      <div style="font-size: 20px; text-align: center; font-family: 'futura-pt-condensed';">  
+        <span>CURATED BIRTHDAY GIFTS FOR KIDS AT YOUR FINGERTIPS!</span>
         <br>
         <br>
       </div>
       
-      <div class="span5">
+      <div class="span12">
         <br>
         <p style="font-size: 17px; text-align: center; ">Bubboli helps you keep track of childrens'
         <span style="font-size: 17px; color: #FFFFFF; background-color: #FF9B97; padding: 5px;">birthdays and sends you curated gift recommendations
@@ -18,11 +18,12 @@
         <div style="text-align: center">
         <%= link_to "SIGN UP NOW", new_user_path, :class => "btn btn-large green" %>
         </div>
+        <br>
       </div>
     
-      <div class="explainer-video pull-right">
+      <!-- <div class="explainer-video pull-right">
         <iframe width="450" height="253" src="http://www.youtube.com/embed/a7-K1rfFtE8" frameborder="0" allowfullscreen></iframe>
-      </div>
+      </div> -->
     </div>
   </div>  
     <br>
