removed share this button

--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -1,5 +1,5 @@
-<script type="text/javascript" src="http://w.sharethis.com/button/buttons.js"></script>
-<script type="text/javascript">stLight.options({publisher: "271e0905-d30e-4bc4-af9d-b574b6eda513"}); </script>
+<!-- <script type="text/javascript" src="http://w.sharethis.com/button/buttons.js"></script>
+<script type="text/javascript">stLight.options({publisher: "271e0905-d30e-4bc4-af9d-b574b6eda513"}); </script> -->
 
 <% @page_title = @blog.title %>
 
@@ -26,9 +26,12 @@
               </ul>
             </div>
 
-            <div class="span3 no-margin-or-bullet pull-right">
-              <span class='st_facebook_hcount' displayText='Facebook'></span>
-              <span class='st_twitter_hcount' displayText='Tweet' st_title='<%= @page_title %> via @bubboli'></span>
+            <div class="span3 no-margin-or-bullet">
+              <!-- ShareThis Button BEGIN -->
+              <!-- <span class='st_facebook_hcount' displayText='Facebook'></span>
+              <span class='st_twitter_hcount' displayText='Tweet' st_title='<%= @page_title %> via @bubboli'></span> -->
+              <!-- ShareThis Button END -->
+              
               
               <!-- AddThis Button BEGIN -->
               <div class="addthis_toolbox addthis_default_style">
