changed color of gift index link

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -707,6 +707,10 @@ li.prod-list {
 
 .profile-well, .preference-well {
   font-size: 11px;
+  }
+  
+.prod-well a {
+  color: $dark-green-blue;
   }   
 
 .accordion-inner {
