--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -379,14 +379,14 @@ li.inline  {
 .welcome {
   position: fixed;
   top: 200px;
-  left: 0px;
+  margin-left: -220px;
   z-index: 99;
   }
   
 .welcome-text {
   position: fixed;
   top: 300px;
-  left: 20px;
+  margin-left: -215px;
   width: 160px;
   z-index: 99;
   text-align: center;
