fixed location of welcome logo in user pages

--- a/app/views/layouts/user.html.erb
+++ b/app/views/layouts/user.html.erb
@@ -51,6 +51,19 @@
 <%= render partial: "shared/flash_messages", flash: flash %> <br>
 
   <div class="container">
+    <div class="container">
+      <div class="welcome">
+        <%= welcome %>
+      </div>  
+
+      <div class="welcome-text">
+        <% if signed_in? %>
+          Welcome back, <%= current_user.first_name %><br>
+          <%= link_to "SIGN OUT", sign_out_path, method: "delete" %>
+        <% else %>
+          <%= link_to "SIGN IN", sign_in_path %> | <%= link_to "REGISTER", new_user_path %>
+        <% end %>
+      </div>
   
     <div class="row">
     
@@ -92,19 +105,6 @@
     
     
       <div class="offset3 span9">
-
-        <div class="welcome">
-          <%= welcome %>
-        </div>  
-
-        <div class="welcome-text">
-          <% if signed_in? %>
-            Welcome back, <%= current_user.first_name %><br>
-            <%= link_to "SIGN OUT", sign_out_path, method: "delete" %>
-          <% else %>
-            <%= link_to "SIGN IN", sign_in_path %>
-          <% end %>
-        </div>  
 
         <%= yield %>
     
