added addthis tracker and meta tag in head

--- a/app/views/layouts/gift.html.erb
+++ b/app/views/layouts/gift.html.erb
@@ -6,7 +6,7 @@
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
   <%= favicon_link_tag %>
-
+  <%= content_for?(:head) ? yield(:head) : '' %>
 
 <% # Adding google analytics below %>  
   <script type="text/javascript">
@@ -23,6 +23,9 @@
     })();
 
   </script>
+
+  <script type="text/javascript">var addthis_config = {"data_track_addressbar":true};</script>
+  <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-51a4c5f04864e4f4"></script>
   
 </head>
 
