--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -38,7 +38,7 @@
               <a class="addthis_button_facebook_like" fb:like:layout="button_count"></a>
               <a class="addthis_button_tweet"></a>
               </div>
-              <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=undefined"></script>
+              <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-51a4c5f04864e4f4"></script>
               <!-- AddThis Button END -->
             </div>
 
