--- a/app/views/gifts/show.html.erb
+++ b/app/views/gifts/show.html.erb
@@ -1,6 +1,8 @@
-<meta property="og:image" content="<%= @gift.gift_images.first.image_url(:large_pic) %>" />
-<meta property="og:title" content="<%= @page_title %> via @bubboli'>"/>
-<meta property="og:description" content="<%= truncate(simple_format(@gift.description), :length => 118) %>"/>
+<% content_for :head do %>
+  <meta property="og:image" content="<%= @gift.gift_images.first.image_url(:large_pic) %>" />
+  <meta property="og:title" content="<%= @page_title %>" />
+  <meta property="og:description" content="<%= truncate(simple_format(@gift.description), :length => 118) %>"/>
+<% end %>
 
 <script type="text/javascript">var switchTo5x=true;</script>
 <!-- <script type="text/javascript" src="http://w.sharethis.com/button/buttons.js"></script>
@@ -77,7 +79,7 @@
         <a class="addthis_button_pinterest_share"></a>
         <a class="addthis_button_email"></a>
         </div>
-        <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=undefined"></script>
+        <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-51a4c5f04864e4f4"></script>
         <!-- AddThis Button END -->
       </div>
       
