--- a/app/views/gifts/index.html.erb
+++ b/app/views/gifts/index.html.erb
@@ -7,7 +7,7 @@
       <p class="splash-font"><strong>Let us help you find the perfect gift for your little ones<p class="gray-font">We find and recommend products
         that are unique, useful, creative, modern and most importantly, fun.</strong></p>
       <hr/>
-      <p class="splash-font"><strong>WE ARE SOCIAL: </strong><br/></p>
+      <p class="splash-font"><strong>WE ARE SOCIAL: </strong><br></p>
       <div style="opacity: 0.6">
         <!-- <%= link_to facebook, "http://www.facebook.com/bubboli", :target => "_blank" %> 
         <%= link_to twitter, "http://www.twitter.com/bubboli", :target => "_blank" %>
