added meta keywords and description to application, pages, gifts, blog and user layout pages

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title><%= @page_title || 'Bubboli' %></title>
+   <title><%= @page_title || 'Bubboli - the best gifts and toys for your kids, nieces, nephews, and grandkids' %></title>
   <%= stylesheet_link_tag "application",  :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
   <%= favicon_link_tag %>
-
+  
+  <meta name="keywords" content="Toys and Games for Kids, Boys, Girls, Nieces, Nephews, Baby and Teens. Educational Toys, toy, toys for us. buy toys online. baby games, baby toys, 
+  kids toys. Fisher price, Think fun, ThinkFun, Hasbro, Lego, Skip Hop, LeapFrog, Leap frog, Books" /> 
+  <meta name="description" content="Bubboli gift ideas for the best birthday gifts, holiday gifts, baby gifts, gifts for girls, gifts for boys, gifts for teens, and gifts for kids." />
 
 <% # Adding google analytics below %>  
   <script type="text/javascript">
