--- a/app/views/layouts/user.html.erb
+++ b/app/views/layouts/user.html.erb
@@ -26,6 +26,10 @@
 
   <script type="text/javascript">var addthis_config = {"data_track_addressbar":true};</script>
   <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-51a4c5f04864e4f4"></script>
+
+  <meta name="keywords" content="Toys and Games for Kids, Boys, Girls, Nieces, Nephews, Baby and Teens. Educational Toys, toy, toys for us. buy toys online. baby games, baby toys, 
+  kids toys. Fisher price, Think fun, ThinkFun, Hasbro, Lego, Skip Hop, LeapFrog, Leap frog, Books" /> 
+  <meta name="description" content="Bubboli gift ideas for the best birthday gifts, holiday gifts, baby gifts, gifts for girls, gifts for boys, gifts for teens, and gifts for kids." />
   
 </head>
 
