added page title to several pages

--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -1,7 +1,7 @@
 <!-- <script type="text/javascript" src="http://w.sharethis.com/button/buttons.js"></script>
 <script type="text/javascript">stLight.options({publisher: "271e0905-d30e-4bc4-af9d-b574b6eda513"}); </script> -->
 
-<% @page_title = @blog.title %>
+<% @page_title = "Bubboli - #{@blog.title}" %>
 
 <div class="container">
   <%= page_navigation_links @blogs, '#' %>  
