--- a/app/views/gifts/show.html.erb
+++ b/app/views/gifts/show.html.erb
@@ -9,7 +9,7 @@
 <script type="text/javascript">stLight.options({publisher: "271e0905-d30e-4bc4-af9d-b574b6eda513"}); </script> -->
 
 
-<% @page_title = @gift.name %>
+<% @page_title = "Bubboli - #{@gift.name}" %>
 <div class="container">
 
 <i class="icon-chevron-left"></i><span class="red-link"><%= link_to("Back to Gifts", gifts_path) %></span><br><br>
