--- a/app/views/pages/_brands.html.erb
+++ b/app/views/pages/_brands.html.erb
@@ -1,3 +1,4 @@
+<% @page_title = "Bubboli - toy brands we love" %>
 <div class="container">
   
  <p class="brand-text qikki-font">These brands share our commitment of providing your children with the best quality products.</p>
