--- a/app/views/blogs/archive.html.erb
+++ b/app/views/blogs/archive.html.erb
@@ -1,4 +1,4 @@
-
+<% @page_title = "Bubboli - blog archive" %>
 <div class="container">
   <div class="row will-paginate">
       <%= page_navigation_links @blogs, '#' %>  
