--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -1,3 +1,5 @@
+<% @page_title = "Bubboli blog" %>
+
 <div class="container">
 <% content_for :head, auto_discovery_link_tag(:atom, blogs_url(format: "atom")) %>
 
