--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -23,6 +23,7 @@
               <ul class="no-margin-or-bullet">
                 <li style="font-size: 18px; color: #909090"><%= @blog.title %></li>
                 <li style="font-size: 11px"><%= @blog.blog_categories.collect {|cat| cat.name }.join(", ") %> | <%= link_to(pluralize(@blog.comments.size - 1, 'comment'), :action => 'show', :id => @blog.id, :anchor => 'comments') %></li>                
+                <li><%= link_to "Edit", :action => 'manage', :id => @blog.id if current_user && current_user.admin == true %></li>
               </ul>
             </div>
 
@@ -44,8 +45,8 @@
 
           </div>
           
-          <div style="text-align: center"><%= image_tag(@blog.blog_image.image_url(:large_pic).to_s) if @blog.blog_image.image? %></div>
-          
+          <div style="margin-left: auto; margin-right: auto; width: 380px"><%= image_tag(@blog.blog_image.image) if @blog.blog_image.image? %></div>
+          <br>
           <div class="blog-content red-link">
             <%= simple_format(@blog.content) %>
           </div>
