fixed spacing in faq

--- a/app/views/pages/_faq.html.erb
+++ b/app/views/pages/_faq.html.erb
@@ -63,7 +63,7 @@
     <li>
       <strong>Why does the “Buy Me” link take me to a different site?</strong>
       <p>Bubboli does not warehouse any of the gifts we recommend. We pride ourselves in finding fun and unique gifts that meet our strict criteria.  We believe this gives us uninhibited
-        freedom to choose only the best gifts eliminating any bias towards promoting what we already have in inventory.<br><br></p>
+        freedom to choose only the best gifts eliminating any bias towards promoting what we already have in inventory.<br></p>
     </li>
 
     <li>
