--- a/app/views/children/_new.html.erb
+++ b/app/views/children/_new.html.erb
@@ -2,6 +2,7 @@
 <%= simple_form_for(@child, :html => {:class => "form_horizontal"}) do |f| %>
   <%= render(:partial => 'form', :locals => {:f => f}) %>
   <%= select_tag :relation_type_ids, options_from_collection_for_select(RelationType.non_parent, "id", "name") %>
+  <%= check_box_tag :invite, 'yes' %>
   <%= hidden_field_tag :invitee, invitee %>
   <div class="pull-right">
     <%= f.button :submit, :class=> "primary" %>
